--- a/src/geometry/CMakeLists.txt
+++ b/src/geometry/CMakeLists.txt
@@ -1,10 +1,15 @@
 add_library(geometry STATIC
     conclusion/line_parallel.cpp
     conclusion/line_parallel.h
+    construction/all_constructions.h
+    construction/line_connect.cpp
+    construction/line_connect.h
+    element/element_types.h
     element/line.cpp
     element/line.h
     element/point.cpp
     element/point.h
+    transform/all_transforms.h
     transform/line_parallel_transitivity.cpp
     transform/line_parallel_transitivity.h
 )
