Add basic algebra (progress point 1)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,22 @@ project(prometry)
 
 option(PROMETRY_WARNINGS_AS_ERRORS "Warnings as errors" ON)
 
+# Sanity check : Check that all submodules are present
+# =======================================================================
+
+function(check_submodules_present)
+    file(READ "${PROJECT_SOURCE_DIR}/.gitmodules" gitmodules)
+    string(REGEX MATCHALL "path *= *[^ \t\r\n]*" gitmodules ${gitmodules})
+    foreach(module ${gitmodules})
+        string(REGEX REPLACE "path *= *" "" module ${module})
+        if (NOT EXISTS "${PROJECT_SOURCE_DIR}/${module}/.git")
+            message(SEND_ERROR "Git submodule ${module} not found."
+                    "Please run: git submodule update --init --recursive")
+        endif()
+    endforeach()
+endfunction()
+check_submodules_present()
+
 # Set hard requirements for C++
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -26,6 +42,10 @@ else()
         set(PROMETRY_CXX_FLAGS "-Werror")
     endif()
 endif()
+
+# System imported libraries
+# ======================
+find_package(SymEngine REQUIRED)
 
 enable_testing()
 add_subdirectory(externals)
