--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Enable modules to include each other's files
 include_directories(.)
 
+add_subdirectory(algebra)
 add_subdirectory(common)
 add_subdirectory(core)
 add_subdirectory(geometry)
