algebra: Add util functions; Add CheckSign and SimplifyEquation; Fix solve; Add more tests
solve_2 is a quadratic equation test which is going perfectly.

TODO: handle limitations as to equation simplification.

--- a/src/algebra/CMakeLists.txt
+++ b/src/algebra/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(algebra STATIC
     algebra.cpp
     algebra.h
+    util.cpp
+    util.h
 )
 
 # Note: linking gmp in is required somehow.
