geometry: explicitly default constructors for transforms
This avoids potentially duplicating constructor code for non-trival objects like std::unordered_map.

Also, enables -flto on non-debug builds. Currently untested yet.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -99,9 +99,9 @@ else()
         endif()
     endif()
 
-    # if (NOT DEBUG)
-    #    add_compile_options("-flto")
-    # endif()
+    if (NOT DEBUG)
+       add_compile_options("-flto")
+    endif()
 endif()
 
 add_subdirectory(algebra)
