geometry: Add PrependicularToAngles
Fixed some visitors in algebra to support this.
Moved tests to their separate folders.

--- a/src/geometry/CMakeLists.txt
+++ b/src/geometry/CMakeLists.txt
@@ -25,6 +25,8 @@ add_library(geometry STATIC
     transform/parallel/line_parallel_transitivity.h
     transform/parallel/parallel_to_angles.cpp
     transform/parallel/parallel_to_angles.h
+    transform/parallel/prependicular_to_angles.cpp
+    transform/parallel/prependicular_to_angles.h
     transform/pythagorean/pythagorean.cpp
     transform/pythagorean/pythagorean.h
 )
