--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(tests
     core/element_common_parent.cpp
     core/element_intersection.cpp
     integrated/proof_output.cpp
+    integrated/pythagorean.cpp
     transform/algebra/line_segment_concat.cpp
     transform/parallel/angles_to_parallel.cpp
     transform/parallel/angles_to_prependicular.cpp
