--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(tests
     transform/parallel/parallel_to_angles.cpp
     transform/parallel/prependicular_to_angles.cpp
     transform/pythagorean/pythagorean.cpp
+    transform/triangle/triangle_internal_angles.cpp
     tests.cpp
 )
 
