common, core: Move proof-generating process to Common::ProofChainNode

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,1 +1,9 @@
-add_library(common INTERFACE)
+add_library(common STATIC
+  assert.h
+  common_funcs.h
+  common_types.h
+  proof_chain_node.cpp
+  proof_chain_node.h
+)
+
+target_compile_options(common PRIVATE ${PROMETRY_CXX_FLAGS})
