algebra, geometry: Switch to ProofChainNode based proof generating
This allows both the algebra and the geometry system to generate shared proofs that can reference each other.  The proof also has its format tweaked and works "better than ever"

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -2,6 +2,8 @@ add_library(common STATIC
   assert.h
   common_funcs.h
   common_types.h
+  dynamic_bitset.cpp
+  dynamic_bitset.h
   proof_chain_node.cpp
   proof_chain_node.h
 )
