--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(tests
     algebra/solve_2.cpp
     algebra/util_check_sign.cpp
     algebra/util_simplify_equation.cpp
+    common/dynamic_bitset.cpp
     construction/line_connect.cpp
     core/element_common_parent.cpp
     core/element_intersection.cpp
