algebra: Introduce EquationToString
This one formats the equations to something better than "X = 0" and the results are more readable.

TODO: Fix things like "3*x = 5"

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(tests
     algebra/solve_1.cpp
     algebra/solve_2.cpp
     algebra/util_check_sign.cpp
+    algebra/util_equation_to_string.cpp
     algebra/util_simplify_equation.cpp
     common/dynamic_bitset.cpp
     construction/line_connect.cpp
