Fixed error in algebra, added SSS_Similar.
Unfortunately the addition of SSS_Similar has made integrated tests very slow; the algebra took too much time. [TODO]

--- a/src/geometry/CMakeLists.txt
+++ b/src/geometry/CMakeLists.txt
@@ -45,6 +45,8 @@ add_library(geometry STATIC
     transform/triangle/similar_to_angles.h
     transform/triangle/similar_to_line_segment_ratio.cpp
     transform/triangle/similar_to_line_segment_ratio.h
+    transform/triangle/sss_similar.cpp
+    transform/triangle/sss_similar.h
     transform/triangle/triangle_internal_angles.cpp
     transform/triangle/triangle_internal_angles.h
 )
