--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -24,6 +24,7 @@ add_executable(tests
     transform/triangle/aa_similar.cpp
     transform/triangle/similar_to_angles.cpp
     transform/triangle/similar_to_line_segment_ratio.cpp
+    transform/triangle/sss_similar.cpp
     transform/triangle/triangle_internal_angles.cpp
     tests.cpp
 )
