--- a/src/geometry/CMakeLists.txt
+++ b/src/geometry/CMakeLists.txt
@@ -43,6 +43,8 @@ add_library(geometry STATIC
     transform/triangle/aa_similar.h
     transform/triangle/sas_similar.cpp
     transform/triangle/sas_similar.h
+    transform/triangle/hl_similar.cpp
+    transform/triangle/hl_similar.h
     transform/triangle/similar_to_angles.cpp
     transform/triangle/similar_to_angles.h
     transform/triangle/similar_to_line_segment_ratio.cpp
