--- a/src/geometry/CMakeLists.txt
+++ b/src/geometry/CMakeLists.txt
@@ -45,6 +45,8 @@ add_library(geometry STATIC
     transform/triangle/sas_similar.h
     transform/triangle/hl_similar.cpp
     transform/triangle/hl_similar.h
+    transform/triangle/isosceles_to_angles.cpp
+    transform/triangle/isosceles_to_angles.h
     transform/triangle/similar_to_angles.cpp
     transform/triangle/similar_to_angles.h
     transform/triangle/similar_to_line_segment_ratio.cpp
