--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(tests
     integrated/proof_output.cpp
     integrated/pythagorean.cpp
     integrated/triangle_equality_1.cpp
+    integrated/triangle_equality_2.cpp
     transform/algebra/line_segment_concat.cpp
     transform/parallel/angles_to_parallel.cpp
     transform/parallel/angles_to_prependicular.cpp
