--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(core STATIC
     conclusion.h
     element.cpp
     element.h
+    printer.h
     system.cpp
     system.h
     transform.h
