--- a/src/algebra/CMakeLists.txt
+++ b/src/algebra/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(algebra STATIC
     util.cpp
     util.h
 )
+create_target_directory_groups(algebra)
 
 target_link_libraries(algebra PUBLIC common ${SYMENGINE_LIBRARIES})
 target_compile_options(algebra PRIVATE ${PROMETRY_CXX_FLAGS})
