--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -17,6 +17,8 @@ add_executable(tests
     integrated/triangle_equality_2.cpp
     integrated/triangle_equality_3.cpp
     integrated/triangle_similarity_1.cpp
+    integrated/triangle_similarity_2.cpp
+    integrated/triangle_similarity_3.cpp
     transform/algebra/line_segment_concat.cpp
     transform/parallel/angles_to_parallel.cpp
     transform/parallel/angles_to_perpendicular.cpp
